abhk8s/resources/alb-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: ACM_CERTIFICATE_ARN
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  labels:
    app: internal
  name: internal-app-ingress
  namespace: internal
spec:
  rules:
  - host: ots.abhapp.com
    http:
      paths:
      - backend:
          serviceName: onetimesecret
          servicePort: 80
        path: /*
